fixed typos and such

--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -12,21 +12,27 @@ header:
 author_profile: false
 ---
 
-You've probably seen a convolution before, whether you know it or not. And they're super useful in DL.
+You've probably seen a convolution before, whether you know it or not. And they're super useful in deep learning.
 
-# $$\text{Convoluti}\ast \text{ns}$$
+# $$\text{Convoluti}\!\ast \!\text{ns}$$
 
 *Work in Progress below*
 
-Multiplying polynomials example here.
+Let's say we have two polynomials $$P(x)$$ and $$Q(x)$$ what is their product. Now you may recall the FOIL or BOX method from gradeschool.
+
+Before I explain why polynomial multiplication is a sort of convolution I will first define a discrete convolution.
+
+$$(f \ast g)(s) := \sum_{x=-\infty}^{\infty} f(x) g(s - x)$$
+
+(*Note: $$ := $$ is read "defined as"*). While the summation may look scary it simply means that were summing over one function and the shifted values of another function
 
 The formula for a convolution is the following
 
 $$(f \ast g)(s) := \int_{-\infty}^{\infty} f(x) g(s - x) dx$$
 
-where $$\ast$$ means to convolve, $$f(x)$$ is the kernel and $$g(x)$$ is the function to be colvolved.
+where $$\ast$$ means to convolve, $$f(x)$$ is the kernel and $$g(x)$$ is the function to be convolved.
 
 ## $$\text{CNNs}$$
 
-## $$\text{Refrences}$$
+## $$\text{References}$$
 - Overlay image courtesy [LearnOpenCV](https://learnopencv.com/understanding-convolutional-neural-networks-cnn/)
