add poly example

--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -18,15 +18,31 @@ You've probably seen a convolution before, whether you know it or not. And they'
 
 *Work in Progress below*
 
-Let's say we have two polynomials $$P(x)$$ and $$Q(x)$$ what is their product. Now you may recall the FOIL or BOX method from gradeschool.
+Let's say we have two polynomials $$P(x)$$ and $$Q(x)$$ what is their product. Now you may recall the FOIL or BOX method from gradeschool. Lets define these polynomials as
 
-Before I explain why polynomial multiplication is a sort of convolution I will first define a discrete convolution.
+$$P(x) = \sum_{i=0}^{m}{a_{i}x^{i}, \:\:\: \text{and}\:\:\: Q(x) = \sum_{j=0}^{n}{b_{j}x^{j}}}$$
 
-$$(f \ast g)(s) := \sum_{x=-\infty}^{\infty} f(x) g(s - x)$$
+Now these definitions may look scary but I encourage you to write down some degree polynomial lets say 2 and expand the summation from 0 to 2 to prove the above to yourself. Let $$R(x) = P(x)Q(x)$$. What is the summation for the answer? It is:
 
-(*Note: $$ := $$ is read "defined as"*). While the summation may look scary it simply means that were summing over one function and the shifted values of another function
+$$R(x) = \sum_{k=0}^{m+n}{c_kx^k}, \:\:\: \text{where } c_k= \sum_{i=0}^{k}{a_ib_{k-i}}$$
 
-The formula for a convolution is the following
+And so it turns out that $$c_k$$ is a discrete convolution of the coefficients. To see this better we can extended the bounds of the summation to the infinites (we can do this because all the terms outside the original range are zero):
+
+$$ c_k= \sum_{i=-\infty}^{\infty}{a_ib_{k-i}}$$
+
+which is exactly the formula for a discrete convolution. You might see it like
+
+$$(a \ast b)[k] := \sum_{i=-\infty}^{\infty} a[k]b[k-i]$$
+
+Some quick notes on notation: the $$\ast$$ symbol means convolution. The number/variable inside the brackets is the index for the corresponding sequence (*Ex: $$a_i= a[i]$$*). And $$ := $$ is read "defined as". 
+
+<!-- Before I explain why polynomial multiplication is a sort of convolution I will first define a discrete convolution.
+
+$$(f \ast g)(s) := \sum_{x=-\infty}^{\infty} f(x) g(s - x)$$ -->
+
+<!-- While the summation may look scary it simply means that were summing over one function and the shifted values of another function -->
+
+The formula for a convolution on continuous functions is the following
 
 $$(f \ast g)(s) := \int_{-\infty}^{\infty} f(x) g(s - x) dx$$
 
