--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -32,7 +32,7 @@ $$ c_k= \sum_{i=-\infty}^{\infty}{a_ib_{k-i}}$$
 
 which is exactly the formula for a discrete convolution. You might see it like
 
-$$(a \ast b)[k] := \sum_{i=-\infty}^{\infty} a[k]b[k-i]$$
+$$(a \ast b)[k] := \sum_{i=-\infty}^{\infty} a[i]b[k-i]$$
 
 Some quick notes on notation: the $$\ast$$ symbol means convolution. The number/variable inside the brackets is the index for the corresponding sequence (*Ex: $$a_i= a[i]$$*). And $$ := $$ is read "defined as". 
 
@@ -46,7 +46,13 @@ The formula for a convolution on continuous functions is the following
 
 $$(f \ast g)(s) := \int_{-\infty}^{\infty} f(x) g(s - x) dx$$
 
-where $$\ast$$ means to convolve, $$f(x)$$ is the kernel and $$g(x)$$ is the function to be convolved.
+where $$f(x)$$ is the kernel and $$g(x)$$ is the function to be convolved. Again this looks pretty similar to the discrete convolution, we switch to integration to catch all those values between the integers (non integers) as it makes it much easier than a summation.
+
+## $$\text{Signal Processing}$$
+
+You can't talk about convolutions without taking about signal processing as its one of convolutions most known applications (at least before CNNs became popular). Before I start I would just like to say I'm not to familiar with signal processing so forgive me for any mistakes I make. So according to Wikipedia signal processing is the analysis of signals like radiowaves, images, sound, and more.
+
+According to Steven W. Smith in his *The Scientist and Engineer's Guide to Digital Signal Processing* convolutions are the "single most important technique in Digital Signal Processing" (See I told they were important).
 
 ## $$\text{CNNs}$$
 
