--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -48,13 +48,27 @@ $$(f \ast g)(s) := \int_{-\infty}^{\infty} f(x) g(s - x) dx$$
 
 where $$f(x)$$ is the kernel and $$g(x)$$ is the function to be convolved. Again this looks pretty similar to the discrete convolution, we switch to integration to catch all those values between the integers (non integers) as it makes it much easier than a summation.
 
-## $$\text{Signal Processing}$$
+## $$\text{Applications}$$
 
-You can't talk about convolutions without taking about signal processing as its one of convolutions most known applications (at least before CNNs became popular). Before I start I would just like to say I'm not to familiar with signal processing so forgive me for any mistakes I make. So according to Wikipedia signal processing is the analysis of signals like radiowaves, images, sound, and more.
+You can't talk about convolutions without taking about signal processing as its one of convolutions most known applications (at least before CNNs became popular). 
 
-According to Steven W. Smith in his *The Scientist and Engineer's Guide to Digital Signal Processing* convolutions are the "single most important technique in Digital Signal Processing" (See I told they were important).
+### $$\text{Signal Processing}$$
+Before I start I would just like to say I'm not to familiar with signal processing so forgive me for any mistakes I make. So according to Wikipedia signal processing is the analysis of signals like radiowaves, images, sound, and more.
+
+According to Steven W. Smith in his *The Scientist and Engineer's Guide to Digital Signal Processing* convolutions are the "single most important technique in Digital Signal Processing" (See I told they were important). The first two algorithms you learn in Digital Signal Processing (DSP) involving convolution are the input and output side algorithms.
+
+Essentially, the input side convolves each input with the impulse response to produce the output signal or $$x[n] \ast h[n] = y[n]$$. It does this by decomposing the input signal into versions of the input signal and then convolves each with the impulse response and then synthesizes all the versions to get one output signal. 
+
+The output side algorithm is the same thing except we go from the output's perspective (it looks at what inputs we need to get a particular output). If you didn't understand that don't worry. If you would like to learn more about convolutions and DSP check out Smith's book.
+
+### $$\text{Probability}$$
+
+Let's say we have two dice. Each dice will have a separate probability distribution. If we want to find out what is the probability that both die sum to some number we need to be able to combine the **probability distributions**. We do this through convolutions (in this case the new combined distribution who show how likely each sum is).
+
+In Probability we have two 
 
 ## $$\text{CNNs}$$
 
 ## $$\text{References}$$
 - Overlay image courtesy [LearnOpenCV](https://learnopencv.com/understanding-convolutional-neural-networks-cnn/)
+- The scientist and engineer's guide to digital signal processing Steven W. Smith, ISBN:978-0-9660176-3-2
