--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -65,7 +65,29 @@ The output side algorithm is the same thing except we go from the output's persp
 
 Let's say we have two dice. Each dice will have a separate probability distribution. If we want to find out what is the probability that both die sum to some number we need to be able to combine the **probability distributions**. We do this through convolutions (in this case the new combined distribution who show how likely each sum is).
 
-In Probability we have two 
+I will give an overview of what this would look like for discrete random variables (*SideQuest: Try to find out how convolutions work for continuous random variables*), but first some terminology (*This is only for review purposes*). We say $$X$$ is a discrete random variable if its values can be counted, otherwise, $$X$$ is a continuous random variable. The range or support of $$X$$ (denoted $$R_X$$)contains all the possible values of $$X$$ aka $$R_X = \{x_1, x_2, x_3, ...\}$$. The probability mass function (PMF) of $$X$$ is the function $$p_X(x_k) = p(X=x_k), \:\:\:\text{for} \:\:\: k =1,2,3,...$$. And in general $$\forall x \in \bold{R}$$:
+
+$$\begin{equation}
+             p_X(x) = \left\{
+              \begin{array}{l l}
+                p(X=x) & \quad \text{if } x \in R_X\\
+                0 & \quad \text{otherwise}
+              \end{array} \right.
+            \end{equation}
+$$
+
+Let $$X$$ be a discrete random variable with range $$R_X$$ and PMF $$p_X(x)$$. Let $$Y$$ be another discrete random variable with range $$R_Y$$ and PMF $$p_Y(y)$$.
+
+The PMF of $$Z$$ such that $$Z = X + Y$$
+
+$$
+\begin{align*}
+p_Z(z) = \sum_{y=R_Y}{p_Y(y)p_X(z-y)} \\
+p_Z(z) = \sum_{x=R_X}{p_X(x)p_Y(z-x)}
+\end{align*}
+$$
+
+They both give us the same solution since $$ Y+X = X+Y$$. In the first equation we loop over the possible values of Y and we find the probability that $$X = z-y$$. The second one is the same but the places of the variables are swapped.
 
 ## $$\text{CNNs}$$
 
