--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -16,13 +16,12 @@ You've probably seen a convolution before, whether you know it or not. And they'
 
 # $$\text{Convoluti}\!\ast \!\text{ns}$$
 
-*Work in Progress below*
 
 Let's say we have two polynomials $$P(x)$$ and $$Q(x)$$ what is their product. Now you may recall the FOIL or BOX method from gradeschool. Lets define these polynomials as
 
 $$P(x) = \sum_{i=0}^{m}{a_{i}x^{i}, \:\:\: \text{and}\:\:\: Q(x) = \sum_{j=0}^{n}{b_{j}x^{j}}}$$
 
-Now these definitions may look scary but I encourage you to write down some degree polynomial lets say 2 and expand the summation from 0 to 2 to prove the above to yourself. Let $$R(x) = P(x)Q(x)$$. What is the summation for the answer? It is:
+Now these definitions may look scary but I encourage you to write down some degree polynomial lets say 2 and expand the summation from 0 to 2 to prove the above to yourself. Let $$R(x) = P(x)Q(x)$$. What is the summation for $$R(x)$$? It is:
 
 $$R(x) = \sum_{k=0}^{m+n}{c_kx^k}, \:\:\: \text{where } c_k= \sum_{i=0}^{k}{a_ib_{k-i}}$$
 
@@ -65,7 +64,7 @@ The output side algorithm is the same thing except we go from the output's persp
 
 Let's say we have two dice. Each dice will have a separate probability distribution. If we want to find out what is the probability that both die sum to some number we need to be able to combine the **probability distributions**. We do this through convolutions (in this case the new combined distribution who show how likely each sum is).
 
-I will give an overview of what this would look like for discrete random variables (*SideQuest: Try to find out how convolutions work for continuous random variables*), but first some terminology (*This is only for review purposes*). We say $$X$$ is a discrete random variable if its values can be counted, otherwise, $$X$$ is a continuous random variable. The range or support of $$X$$ (denoted $$R_X$$)contains all the possible values of $$X$$ aka $$R_X = \{x_1, x_2, x_3, ...\}$$. The probability mass function (PMF) of $$X$$ is the function $$p_X(x_k) = p(X=x_k), \:\:\:\text{for} \:\:\: k =1,2,3,...$$. And in general $$\forall x \in \bold{R}$$:
+I will give an overview of what this would look like for discrete random variables (*SideQuest: Try to find out how convolutions work for continuous random variables*), but first some terminology (*This is only for review purposes*). We say $$X$$ is a discrete random variable if its values can be counted, otherwise, $$X$$ is a continuous random variable. The range or support of $$X$$ (denoted $$R_X$$)contains all the possible values of $$X$$ aka $$R_X = \{x_1, x_2, x_3, ...\}$$. The probability mass function (PMF) of $$X$$ is the function $$p_X(x_k) = p(X=x_k), \:\:\:\text{for} \:\:\: k =1,2,3,...$$. And for all countable values ($$\forall x \in $$ ):
 
 $$\begin{equation}
              p_X(x) = \left\{
@@ -89,8 +88,12 @@ $$
 
 They both give us the same solution since $$ Y+X = X+Y$$. In the first equation we loop over the possible values of Y and we find the probability that $$X = z-y$$. The second one is the same but the places of the variables are swapped.
 
+Now about the sidequest I mentioned before make sure to take a look at probability density functions.
 ## $$\text{CNNs}$$
+
+CNNs are where most people (nowadays) encounter convolutions and there's a lot to them so I'll be posting it in a part 2.
 
 ## $$\text{References}$$
 - Overlay image courtesy [LearnOpenCV](https://learnopencv.com/understanding-convolutional-neural-networks-cnn/)
 - The scientist and engineer's guide to digital signal processing Steven W. Smith, ISBN:978-0-9660176-3-2
+- Taboga, Marco (2021). "Convolutions", Lectures on probability theory and mathematical statistics. Kindle Direct Publishing. Online appendix. [Website Link](https://www.statlect.com/glossary/convolutions.)
