--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -10,6 +10,7 @@ header:
   overlay_image: /assets/images/cnn.png
   overlay_filter: 0.4
 author_profile: false
+classes: wide
 ---
 
 You've probably seen a convolution before, whether you know it or not. And they're super useful in deep learning.
