--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -9,7 +9,7 @@ header:
   teaser: /assets/images/cnn.png
   overlay_image: /assets/images/cnn.png
   overlay_filter: 0.4
-author_profile: false
+author_profile: true
 classes: wide
 ---
 
