--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -3,14 +3,17 @@ title: "Convolutions"
 categories:
   - Learning
 tags:
-  - calculus
+  - math
   - application
+  - probability
 header:
   teaser: /assets/images/cnn.png
   overlay_image: /assets/images/cnn.png
   overlay_filter: 0.4
-author_profile: true
 classes: wide
+comments: true
+share: true
+related: true
 ---
 
 You've probably seen a convolution before, whether you know it or not. And they're super useful in deep learning.
