--- a/_posts/2025-04-19-conv.md
+++ b/_posts/2025-04-19-conv.md
@@ -14,6 +14,7 @@ classes: wide
 comments: true
 share: true
 related: true
+author_profile: true
 ---
 
 You've probably seen a convolution before, whether you know it or not. And they're super useful in deep learning.
