created structure for article

--- a/_posts/2025-04-21-cnns.md
+++ b/_posts/2025-04-21-cnns.md
@@ -24,3 +24,13 @@ No not the media source. The deep learning model.
 # $$\text{Convolutional neural network (CNN)}$$
 
 ## $$\text{Review of convolutions}$$
+
+## $$\text{Convolution vs Cross-Correlation}$$
+
+## $$\text{Edge Detection Example}$$
+
+## $$\text{CNN Structures}$$
+
+## $$\text{Classic CNN Networks}$$
+
+## $$\text{Residual connections and ResNet}$$
